--- a/Project_Nhom10/Views/Shared/_LayoutPage1.cshtml
+++ b/Project_Nhom10/Views/Shared/_LayoutPage1.cshtml
@@ -773,7 +773,7 @@
                                                 <li><a href="authordetail.html">Author Detail</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="products.html">Best Selling</a></li>
+                                        <li><a href="~/Views/Home/BestSelling.cshtml">Best Selling</a></li>
                                         <li><a href="products.html">Weekly Sale</a></li>
                                         <li class="menu-item-has-children">
                                             <a href="javascript:void(0);">Latest News</a>
@@ -783,7 +783,7 @@
                                                 <li><a href="newsdetail.html">News Detail</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contactus.html">Contact</a></li>
+                                        <li><a href="~/Home/Contact.cshtml">Contact</a></li>
                                         <li class="menu-item-has-children current-menu-item">
                                             <a href="javascript:void(0);"><i class="icon-menu"></i></a>
                                             <ul class="sub-menu">
