--- a/Project_Nhom10/Areas/Admin/Views/Orders/Index.cshtml
+++ b/Project_Nhom10/Areas/Admin/Views/Orders/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 <div class="container">
-    <form action="/admin/Orders/index" method="post" class="d-flex" role="search">
+    <form action="/admin/Orders/index" method="post" class="d-flex my-4" role="search">
         <input class="form-control me-2 border-black-50" value="@ViewBag.search" name="search" style="width:330px; height: 40px; border-radius: 0" type="search" placeholder="Search" aria-label="Search">
     </form>
     <table class="table table-bordered proTable">
